JEDIT 4.2 VERSION HISTORY

{{{ Version 4.2pre10

Thanks to Barry Carr, Brad Mace, Ken Turner, Nahuel Foronda,
Trevor Harmon and Thomas Galvin for contributing to this release.

{{{ Miscellaneous

- Added "Create Constructor" macro, updated "Make Get and Set Methods"
  and "Get Class Name" macros (Thomas Galvin).

- It is now possible to customize the metal look and feel fonts under
  JDK 1.5.

- Page Up/Page Down restored to jEdit 4.1 behavior: when they are
  invoked at the beginning/end of the buffer, the caret is moved to
  the beginning/end, instead of staying at its current position.

}}}
{{{ Syntax Highlighting

- Updated Pascal syntax highlighting (Barry Carr).

- Updated ActionScript syntax highlighting (Nahuel Foronda).

- Updated SDL/PR syntax highlighting (Ken Turner).

}}}
{{{ Bug Fixes

- Fixed another NullPointerException in the file system browser when
  using VFS's that do not set the VFS.DirectoryEntry.symlinkPath field.

- Actually fix the MacOS plugin for the latest MRJ update.

- Fix status bar problem with GTK look and feel if memory indicator is
  enabled.

- Fixed exception with auto indent (Brad Mace).

- jEdit didn't compile with Sun's JDK 1.5 beta (Trevor Harmon).

- "Find Next" didn't work with directory searches where the paths
  contained symbolic links.

- Fixed highlighting of verbatim environments in LaTeX files.

- Fixed ArrayIndexOutOfBoundsException when invoking "Expand Fold"
  outside of a narrowed range.

- Fixed problem where any dialogs boxes shown by the search and replace
  code would force the search and replace dialog to be shown on OS X.

- Fixed a performance regression since 4.2pre7 on MacOS X.

- More deep indent fixes (Brad Mace).

}}}
{{{ API Changes

- Added "optional dependencies". An optional dependency looks like this:

  plugin.MyPlugin.depend.0=optional plugin AnotherPlugin 1.3.1

  On startup, optional dependency are ignored; if AnotherPlugin does not